tests/ui/impl-trait/in-trait/mismatched-where-clauses.stderr
error[E0276]: impl has stricter requirements than trait
  --> $DIR/mismatched-where-clauses.rs:8:44
   |
LL |     fn foo<S>(s: S) -> impl Sized;
   |     ------------------------------ definition of `foo` from trait
...
LL |     fn foo<S>(s: S) -> impl Sized where S: Bar {}
   |                                            ^^^ impl has extra requirement `S: Bar`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0276`.
